# type-safe-avl

./: .gitignore  .stylish-haskell.yaml  BST.hs  BSTGeneral.hs  BSTNat.hs  CHANGELOG.md  Chr.hs  Compare.hs  ITree.hs  Makefile  Nat.hs  Node.hs  README.md  Str.hs  Test.hs  TestBSTNat.hs  avl-fullextern-compilation-times.txt  balanced-binary-search-tree.cabal  benchmark.sh  dudas.txt  requirements.txt  run.sh  stylish.sh  type-safe-avl.cabal
BSTNatClasses/: BSTNat.hs  TestBSTNat.hs
BSTNatGADT/: BSTNat.hs  TestBSTNat.hs
BSTNatTypeFamilies/: BSTNat.hs  Nat.hs  TestBSTNat.hs
Benchmarking/: Utils.hs  change_value.sh
Benchmarking/FullExtern/: Benchmark.hs  Operations.hs
Benchmarking/FullExtern/Delete/: Delete10.hs  Delete100.hs  Delete20.hs  Delete200.hs  Delete30.hs  Delete300.hs  Delete40.hs  Delete400.hs  Delete50.hs  Delete500.hs  Delete60.hs  Delete600.hs  Delete70.hs  Delete80.hs  Delete90.hs
Benchmarking/FullExtern/Insert/: Insert10.hs  Insert100.hs  Insert20.hs  Insert200.hs  Insert30.hs  Insert300.hs  Insert40.hs  Insert400.hs  Insert50.hs  Insert500.hs  Insert60.hs  Insert600.hs  Insert70.hs  Insert80.hs  Insert90.hs
Benchmarking/FullExtern/Lookup/: Lookup10.hs  Lookup100.hs  Lookup20.hs  Lookup200.hs  Lookup30.hs  Lookup300.hs  Lookup40.hs  Lookup400.hs  Lookup50.hs  Lookup500.hs  Lookup60.hs  Lookup600.hs  Lookup70.hs  Lookup80.hs  Lookup90.hs
Benchmarking/Intern/: Benchmark.hs  Operations.hs
Benchmarking/Intern/Delete/: Delete10.hs  Delete100.hs  Delete20.hs  Delete200.hs  Delete30.hs  Delete300.hs  Delete40.hs  Delete400.hs  Delete50.hs  Delete500.hs  Delete60.hs  Delete600.hs  Delete70.hs  Delete80.hs  Delete90.hs
Benchmarking/Intern/Insert/: Insert10.hs  Insert100.hs  Insert20.hs  Insert200.hs  Insert30.hs  Insert300.hs  Insert40.hs  Insert400.hs  Insert50.hs  Insert500.hs  Insert60.hs  Insert600.hs  Insert70.hs  Insert80.hs  Insert90.hs
Benchmarking/Intern/Lookup/: Lookup10.hs  Lookup100.hs  Lookup20.hs  Lookup200.hs  Lookup30.hs  Lookup300.hs  Lookup40.hs  Lookup400.hs  Lookup50.hs  Lookup500.hs  Lookup60.hs  Lookup600.hs  Lookup70.hs  Lookup80.hs  Lookup90.hs
Data/: Chr.hs  Nat.hs  NatProofs.hs  Str.hs
Data/Tree/: ITree.hs  Node.hs  TreeProofs.hs
Data/Tree/AVL/: Extern.hs  FullExtern.hs  Intern.hs  Invariants.hs  InvariantsProofs.hs  Unsafe.hs
Data/Tree/BST/: Extern.hs  FullExtern.hs  Intern.hs  Invariants.hs  InvariantsProofs.hs  Utils.hs
FullExtern/: AVL.hs  BST.hs  Examples.hs
ITreeNatIncremental/: AVL.hs  BBST.hs  BBT.hs  BBT2.hs  BST.hs  BSTNat2.hs  BSTNat3.hs  BSTNat4.hs  ITree.hs  ITreeNat.hs  Node.hs  Test.hs  TestBSTNat.hs  TestBSTNat2.hs  TestBSTNat3.hs  TestBSTNat4.hs  TestITree.hs  TestITreeNat.hs
Intern/: AVL.hs  AVLOperations.hs  BST.hs  BSTOperations.hs  Examples.hs  Test.hs
benchmark/: avg-bench.py  avl-extern-compilation-times.txt  avl-fullextern-compilation-times.txt  avl-intern-compilation-times.txt  avl-unsafe-running-times.txt  bst-extern-compilation-times.txt  bst-fullextern-compilation-times.txt  bst-intern-compilation-times.txt  bst-unsafe-running-times.txt  fityk.fit  plot.py
benchmark/AVL/FullExtern/: Benchmark.hs  compilation-times.txt  running-times.txt
benchmark/AVL/Intern/: Benchmark.hs  compilation-times.txt  running-times.txt
benchmark/AVL/Unsafe/: Benchmark.hs  compilation-times.txt  running-times.txt
benchmark/BST/FullExtern/: Benchmark.hs  compilation-times.txt  running-times.txt
benchmark/data/: avl_extern_delete.csv  avl_extern_insert.csv  avl_extern_lookup.csv  avl_fullextern_delete.csv  avl_fullextern_insert.csv  avl_fullextern_lookup.csv  avl_intern_delete.csv  avl_intern_insert.csv  avl_intern_lookup.csv  avl_unsafe_delete.csv  avl_unsafe_insert.csv  avl_unsafe_lookup.csv  bst_extern_delete.csv  bst_extern_insert.csv  bst_extern_lookup.csv  bst_fullextern_delete.csv  bst_fullextern_insert.csv  bst_fullextern_lookup.csv  bst_intern_delete.csv  bst_intern_insert.csv  bst_intern_lookup.csv  bst_unsafe_delete.csv  bst_unsafe_insert.csv  bst_unsafe_lookup.csv
output_dir/: ITree.hi  Node.hi
output_dir/Benchmarking/: Utils.hi
plots/: errors.txt
(+288 files in other folders)
